fix: tweak tag search alignment.

--- a/src/app/components/tag/deviantart-tags/deviantart-tags.component.scss
+++ b/src/app/components/tag/deviantart-tags/deviantart-tags.component.scss
@@ -8,7 +8,6 @@ $max-deviation-width: 400px;
     @include deviantart-container();
     color: $light-text-color;
     margin-top: $large-spacing;
-    width: 100%;
 
     .deviations-stats {
         padding: $large-spacing;
@@ -55,7 +54,7 @@ $max-deviation-width: 400px;
                     width: 100%;
 
                     @include large-screen() {
-                        width: $max-deviation-width;
+                        width: $max-deviation-width*2;
                     }
 
                     &:hover {
@@ -68,7 +67,7 @@ $max-deviation-width: 400px;
                     width: 100%;
 
                     @include large-screen() {
-                        max-width: $max-deviation-width;
+                        max-width: $max-deviation-width*2;
                     }
 
                     h3 {
